--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,19 @@ javadoc.options.encoding('UTF-8')
 //    options.compilerArgs.add("-parameters")
 //}
 
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            url uri("D:\\Application\\Maven\\repository")
+        }
+    }
+}
+
 repositories {
     mavenCentral()
 }
@@ -25,6 +38,7 @@ dependencies {
     compileOnly("org.springframework.boot:spring-boot-starter:${springBootVersion}")
     api "com.jfinal:enjoy:5.0.3"
     api "co.elastic.clients:elasticsearch-java:${elasticSearchVersion}"
+//    api "com.fasterxml.jackson.core:jackson-databind:2.12.3"
     implementation("commons-collections:commons-collections:3.2.2")
     implementation("org.apache.commons:commons-collections4:4.4")
     implementation("org.apache.commons:commons-lang3:3.12.0")
